
public class GameStatistics {

    public void showStats(){
        
        System.out.println("Game Stats");
                
    }

}
